--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon backend/server.js",
+    "seed": "node backend/seeder",
+    "clear": "node backend/seeder -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Karthik Mohan",
