--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon backend/server.js",
     "seed": "node backend/seeder",
     "clear": "node backend/seeder -d",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Karthik Mohan",
   "license": "ISC",
